Adding masks layers crashes blender #67127

Closed
opened 2019-07-17 15:18:39 +02:00 by Juan Manuel Lynch · 9 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-16 23:38, hash: 4a5e046c92
Worked: (optional)

Short description of error
Seems that adding a mask layer into a mask in the image editor crashes blender

Exact steps for others to reproduce the error

Open new scene
change to compositing work space
change editor to image editor
change to mask mode
create a mask
add a mask layer in the N panel
click left click over the editor
Crash

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1060 3GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.64 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-16 23:38, hash: `4a5e046c92` Worked: (optional) **Short description of error** Seems that adding a mask layer into a mask in the image editor crashes blender **Exact steps for others to reproduce the error** Open new scene change to compositing work space change editor to image editor change to mask mode create a mask add a mask layer in the N panel click left click over the editor Crash

Added subscriber: @JuanManuelLynch

Added subscriber: @JuanManuelLynch

#67235 was marked as duplicate of this issue

#67235 was marked as duplicate of this issue

Added subscriber: @dark999

Added subscriber: @dark999

this bug is reproducible on OpenSUSE TW linux AMD FX8350 cpu, 16G ram, Nvidia GTX690 gpu

system-info_a36a44bb811d.txt

this bug is reproducible on OpenSUSE TW linux AMD FX8350 cpu, 16G ram, Nvidia GTX690 gpu [system-info_a36a44bb811d.txt](https://archive.blender.org/developer/F7614906/system-info_a36a44bb811d.txt)
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Jeroen Bakker self-assigned this 2019-07-17 15:54:26 +02:00
Member

Seems to be missing/incorrect implementation in BKE_mask_copy_nolib Code assumes that the layers are structured identically, but the DEG copy has no mask_layers

Seems to be missing/incorrect implementation in `BKE_mask_copy_nolib` Code assumes that the layers are structured identically, but the DEG copy has no mask_layers

This issue was referenced by f17e2f8dac

This issue was referenced by f17e2f8dac3a392823ed7dbbcdea3f88bff20f75
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @BjornEckhardt

Added subscriber: @BjornEckhardt
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67127
No description provided.